# name: TestSessionsTimelineQueryRunner.test_simple_sessions_unfiltered
  '
  SELECT events.uuid,
         events.`$session_id`,
         toTimeZone(events.timestamp, 'UTC'),
         events.event,
         events.properties,
         events.distinct_id
  FROM events
  WHERE and(equals(events.team_id, 2), greaterOrEquals(toTimeZone(events.timestamp, 'UTC'),
                                                         (SELECT min(toTimeZone(events.timestamp, 'UTC'))
                                                          FROM events
                                                          WHERE and(equals(events.team_id, 2), or(in(events.`$session_id`,
                                                                                                       (SELECT DISTINCT events.`$session_id`
                                                                                                        FROM events
                                                                                                        WHERE and(equals(events.team_id, 2), greater(toTimeZone(events.timestamp, 'UTC'), parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), lessOrEquals(toTimeZone(events.timestamp, 'UTC'), parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC')))
                                                                                                        LIMIT 100)), and(isNull(events.`$session_id`), greater(toTimeZone(events.timestamp, 'UTC'), parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), less(toTimeZone(events.timestamp, 'UTC'), parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC'))))))), lessOrEquals(toTimeZone(events.timestamp, 'UTC'),
                                                                                                                                                                                                                                                                                                                                                                                                          (SELECT max(toTimeZone(events.timestamp, 'UTC'))
                                                                                                                                                                                                                                                                                                                                                                                                           FROM events
                                                                                                                                                                                                                                                                                                                                                                                                           WHERE and(equals(events.team_id, 2), or(in(events.`$session_id`,
                                                                                                                                                                                                                                                                                                                                                                                                                                                        (SELECT DISTINCT events.`$session_id`
                                                                                                                                                                                                                                                                                                                                                                                                                                                         FROM events
                                                                                                                                                                                                                                                                                                                                                                                                                                                         WHERE and(equals(events.team_id, 2), greater(toTimeZone(events.timestamp, 'UTC'), parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), lessOrEquals(toTimeZone(events.timestamp, 'UTC'), parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC')))
                                                                                                                                                                                                                                                                                                                                                                                                                                                         LIMIT 100)), and(isNull(events.`$session_id`), greater(toTimeZone(events.timestamp, 'UTC'), parseDateTime64BestEffortOrNull('2021-01-01T06:00:00Z', 6, 'UTC')), less(toTimeZone(events.timestamp, 'UTC'), parseDateTime64BestEffortOrNull('2021-01-01T18:00:00Z', 6, 'UTC'))))))))
  ORDER BY toTimeZone(events.timestamp, 'UTC') ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1
  '
---
# name: TestSessionsTimelineQueryRunner.test_simple_sessions_with_person_id
  '
  SELECT events.uuid,
         events.`$session_id`,
         toTimeZone(events.timestamp, 'UTC'),
         events.event,
         events.properties,
         events.distinct_id
  FROM events
  INNER JOIN
    (SELECT argMax(person_distinct_id2.person_id, person_distinct_id2.version) AS person_id,
            person_distinct_id2.distinct_id AS distinct_id
     FROM person_distinct_id2
     WHERE equals(person_distinct_id2.team_id, 2)
     GROUP BY person_distinct_id2.distinct_id
     HAVING ifNull(equals(argMax(person_distinct_id2.is_deleted, person_distinct_id2.version), 0), 0)) AS events__pdi ON equals(events.distinct_id, events__pdi.distinct_id)
  WHERE and(equals(events.team_id, 2), ifNull(equals(events__pdi.person_id, '018b4922-f81a-0000-7a5a-2412961cdcd1'), 0))
  ORDER BY toTimeZone(events.timestamp, 'UTC') ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1
  '
---
